Fixed run-tests job

--- a/.github/workflows/28530_deploy.yml
+++ b/.github/workflows/28530_deploy.yml
@@ -20,5 +20,5 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/your-image-name:latest .
-          docker push ${{ secrets.DOCKER_USERNAME }}/your-image-name:latest
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/skin-detector:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/skin-detector:latest
